// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loadin State renders in xs size 1`] = `
<div
  class="loading-state-pf loading-state-pf-xs"
>
  <div
    class="spinner spinner-xs"
  />
  Loading
</div>
`;

exports[`Loading State renders properly while loading 1`] = `
<div
  class="loading-state-pf loading-state-pf-lg"
>
  <div
    class="spinner spinner-lg"
  />
  Loading
</div>
`;

exports[`Loading State renders properly while not loading 1`] = `
<p>
  Loading Complete
</p>
`;
